# better-all-weather

./: README.md  pyproject.toml
src/: backtest.py  data_fetcher.py  data_splitter.py  ledoit_wolf.py  ledoit_wolf_trend.ipynb  ledoit_wolf_trend.py  monthly_regression.py  plot_utils.py  regression.py  tiingo_fetcher.py
