[tool.poetry]
name = "ledoit-wolf"
version = "0.1.0"
description = ""
authors = ["Felix Steiner <felix_steiner@bluewin.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
cvxpy = "^1.6.4"
numpy = "^2.2.4"
ecos = "^2.0.14"
bt = "^1.1.2"
yfinance = "^0.2.55"
python-dotenv = "^1.1.1"
pandas-datareader = "^0.10.0"
marimo = ">=0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
